# fastapi-radar

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  PRODUCTION_READINESS_SUMMARY.md  PROJECT.md  README.md  README_PACKAGE.md  build_dashboard.sh  example_app.py  example_auth_app.py  example_bearer_auth.py  example_custom_auth.py  example_nosql_app.py  mypy.ini  pyproject.toml  pytest.ini  radar.duckdb  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
fastapi_radar/: __init__.py  api.py  background.py  capture.py  middleware.py  models.py  radar.py  tracing.py  utils.py
fastapi_radar/background_tasks/: __init__.py  tracker.py
fastapi_radar/dashboard/: README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
fastapi_radar/dashboard/src/: App.tsx  index.css
fastapi_radar/dashboard/src/api/: client.ts
fastapi_radar/dashboard/src/components/: Dashboard.tsx  DetailDrawer.tsx  ExceptionsList.tsx  JsonViewer.tsx  Layout.tsx  QueriesList.tsx  RequestItem.tsx  RequestsList.tsx  Sidebar.tsx  StatsCards.tsx  TracesList.tsx  WaterfallChart.tsx
fastapi_radar/dashboard/src/context/: DetailDrawerContext.tsx
fastapi_radar/dashboard/src/hooks/: useMetrics.ts  useTheme.ts
fastapi_radar/dashboard/src/i18n/: LanguageContext.tsx  index.ts  (+1 more)
tests/: conftest.py  test_async_radar.py  test_authentication.py  test_background.py  test_capture.py  test_integration.py  test_middleware.py  test_models.py  test_radar.py  test_tracing.py  test_utils.py
(+20 files in other folders)
