[project]
name = "fastapi-radar"
version = "0.1.6"
description = "A debugging dashboard for FastAPI applications with real-time monitoring"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Arif Dogan", email = "me@arif.sh" }]
keywords = [
    "fastapi",
    "debugging",
    "monitoring",
    "dashboard",
    "development-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "starlette",
    "duckdb-engine",
    "duckdb",
]

[project.urls]
"Homepage" = "https://github.com/doganarif/fastapi-radar"
"Bug Reports" = "https://github.com/doganarif/fastapi-radar/issues"
"Source" = "https://github.com/doganarif/fastapi-radar"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "uvicorn[standard]",
    "black",
    "isort",
    "flake8",
    "mypy",
    "httpx",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
